# 3D-QR

./: OBJ_STRUCTURE.md  README.md  cube3d_demo
QR_cube_visual/: CMakeLists.txt  README.md
QR_cube_visual/include/: Camera.hpp  CubeFaceData.hpp  Cubie.hpp  CubieMeshGenerator.hpp  InputController.hpp  RubiksCube.hpp  Shader.hpp
QR_cube_visual/shaders/: cubie.frag  cubie.vert
QR_cube_visual/src/: Camera.cpp  CubieMeshGenerator.cpp  InputController.cpp  RubiksCube.cpp  Shader.cpp  main.cpp
QR_cube_visual/test/: RubiksCubeTest.cpp
QR_cube_visual/test/glm/: glm.hpp
QR_cube_visual/test/glm/gtc/: matrix_transform.hpp  quaternion.hpp
include/: BitGrid.h  Geometry.h  Mesh.h  ObjExporter.h
src/: BitGrid.cpp  Geometry.cpp  Mesh.cpp  ObjExporter.cpp  main.cpp
